k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-php-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-php
  template:
    metadata:
      labels:
        app: nginx-php
    spec:
      containers:
      - name: nginx-php
        image: ${BUILD IMAGE}
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 1
            memory: 500Mi
