k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-php-svc
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx-php
