k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-php-ingress

spec:
  rules:
  - host: ${YOUR HOST}
    http:
      paths:
      - backend:
          serviceName: nginx-php-svc
          servicePort: 80
